[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/main_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/pixel-1-24.tres" type="DynamicFont" id=3]
[ext_resource path="res://menu/buttons/resume_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/buttons/exit_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/TileMapBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://menu/transitions/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://menu/transitions/FadeOut.tscn" type="PackedScene" id=8]

[node name="pause_menu" type="Control" groups=[
"pause_menu",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = ExtResource( 2 )

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -80.0
margin_right = 150.0
margin_bottom = 80.0

[node name="pause_title" type="Label" parent="menu"]
margin_right = 300.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PAUSE"
align = 1
valign = 1

[node name="centre_row" type="HBoxContainer" parent="menu"]
margin_top = 35.0
margin_right = 300.0
margin_bottom = 160.0
size_flags_vertical = 3
alignment = 1

[node name="buttons" type="VBoxContainer" parent="menu/centre_row"]
margin_left = 76.0
margin_right = 300.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 20
alignment = 1

[node name="button_resume" parent="menu/centre_row/buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 4.0
margin_right = 224.0
margin_bottom = 52.0

[node name="button_back" parent="menu/centre_row/buttons" instance=ExtResource( 5 )]
margin_top = 72.0
margin_right = 224.0
margin_bottom = 120.0
has_another_scene = 1

[node name="TileMap" parent="." instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.784314 )
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 65536, 0, 0, 65537, 0, 2, 65538, 0, 2, 65539, 0, 1, 65540, 0, 0, 65541, 0, 1, 65542, 0, 0, 65543, 0, 2, 65544, 0, 1, 65545, 0, 0, 65546, 0, 1, 65547, 0, 1, 65548, 0, 0, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 0, 65553, 0, 1, 65554, 0, 2, 65555, 0, 2, 65556, 0, 2, 65557, 0, 0, 65558, 0, 1, 65559, 0, 0, 131072, 0, 0, 131073, 0, 1, 131074, 0, 2, 131075, 0, 2, 131076, 0, 0, 131077, 0, 1, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 1, 131082, 0, 2, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 2, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 2, 131091, 0, 2, 131092, 0, 1, 131093, 0, 2, 131094, 0, 0, 131095, 0, 0, 196608, 0, 0, 196609, 0, 1, 196610, 0, 2, 196611, 0, 2, 196612, 0, 1, 196613, 0, 2, 196614, 0, 2, 196615, 0, 0, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 2, 196620, 0, 0, 196621, 0, 2, 196622, 0, 0, 196623, 0, 1, 196624, 0, 1, 196625, 0, 1, 196626, 0, 2, 196627, 0, 2, 196628, 0, 1, 196629, 0, 1, 196630, 0, 0, 196631, 0, 0, 262144, 0, 0, 262145, 0, 1, 262146, 0, 2, 262147, 0, 0, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 1, 262152, 0, 2, 262153, 0, 2, 262154, 0, 1, 262155, 0, 1, 262156, 0, 2, 262157, 0, 2, 262158, 0, 1, 262159, 0, 2, 262160, 0, 2, 262161, 0, 1, 262162, 0, 2, 262163, 0, 2, 262164, 0, 1, 262165, 0, 1, 262166, 0, 2, 262167, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 2, 327683, 0, 2, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 2, 327688, 0, 2, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 1, 327693, 0, 1, 327694, 0, 0, 327695, 0, 1, 327696, 0, 0, 327697, 0, 1, 327698, 0, 0, 327699, 0, 2, 327700, 0, 2, 327701, 0, 0, 327702, 1610612736, 2, 327703, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 2, 393219, 0, 1, 393220, 0, 2, 393221, 0, 1, 393222, 0, 1, 393223, 0, 1, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 2, 393228, 0, 0, 393229, 0, 2, 393230, 0, 2, 393231, 0, 2, 393232, 0, 1, 393233, 0, 2, 393234, 0, 1, 393235, 0, 0, 393236, 0, 1, 393237, 0, 1, 393238, 0, 2, 393239, 0, 0, 458752, 0, 0, 458753, 0, 1, 458754, 0, 2, 458755, 0, 0, 458756, 0, 2, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 1, 458761, 0, 2, 458762, 0, 2, 458763, 0, 2, 458764, 0, 2, 458765, 0, 0, 458766, 0, 1, 458767, 0, 2, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 1, 458772, 0, 1, 458773, 0, 1, 458774, 0, 0, 458775, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 2, 524292, 0, 0, 524293, 0, 0, 524294, 0, 1, 524295, 0, 0, 524296, 0, 2, 524297, 0, 0, 524298, 0, 2, 524299, 0, 1, 524300, 0, 1, 524301, 0, 0, 524302, 0, 2, 524303, 0, 0, 524304, 0, 2, 524305, 0, 1, 524306, 0, 2, 524307, 0, 0, 524308, 0, 2, 524309, 0, 1, 524310, 0, 2, 524311, 0, 0, 589824, 0, 0, 589825, 0, 2, 589826, 0, 0, 589827, 0, 1, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 2, 589833, 0, 2, 589834, 0, 0, 589835, 0, 0, 589836, 0, 1, 589837, 0, 0, 589838, 0, 1, 589839, 0, 1, 589840, 0, 0, 589841, 0, 1, 589842, 0, 0, 589843, 0, 2, 589844, 0, 1, 589845, 0, 2, 589846, 0, 1, 589847, 0, 0, 655360, 0, 0, 655361, 0, 1, 655362, 0, 0, 655363, 0, 2, 655364, 0, 2, 655365, 0, 0, 655366, 0, 1, 655367, 0, 2, 655368, 0, 2, 655369, 0, 1, 655370, 0, 2, 655371, 0, 2, 655372, 0, 1, 655373, 0, 0, 655374, 0, 0, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 2, 655379, 0, 1, 655380, 0, 0, 655381, 0, 1, 655382, 0, 2, 655383, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 2, 720899, 0, 2, 720900, 0, 1, 720901, 0, 2, 720902, 0, 2, 720903, 0, 0, 720904, 0, 1, 720905, 0, 1, 720906, 0, 2, 720907, 0, 1, 720908, 0, 0, 720909, 0, 2, 720910, 0, 2, 720911, 0, 0, 720912, 0, 0, 720913, 0, 2, 720914, 0, 0, 720915, 0, 1, 720916, 0, 2, 720917, 0, 2, 720918, 0, 2, 720919, 0, 0, 786432, 0, 0, 786433, 0, 2, 786434, 0, 2, 786435, 0, 2, 786436, 0, 0, 786437, 0, 1, 786438, 0, 2, 786439, 0, 0, 786440, 0, 1, 786441, 0, 2, 786442, 0, 0, 786443, 0, 2, 786444, 0, 1, 786445, 0, 2, 786446, 0, 2, 786447, 0, 0, 786448, 0, 0, 786449, 0, 2, 786450, 0, 2, 786451, 0, 2, 786452, 0, 0, 786453, 0, 2, 786454, 0, 2, 786455, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0 )

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[node name="FadeOut" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="fade_finished" from="FadeOut" to="." method="_on_FadeOut_fade_finished"]
